# look_and_say

./: .gitignore  CMakeLists.txt  README.md
cpp/: README.md
cpp/src/: CMakeLists.txt
cpp/src/look_and_say/: CMakeLists.txt  look_and_say.cpp
cpp/src/look_and_say/common/: look_and_say.cpp  look_and_say.hpp
cpp/src/look_and_say/cosmo/: look_and_say.cpp  look_and_say.hpp
cpp/src/tests/: look_and_say_tests.cpp
python/: README.md
python/src/: lookandsay.py
python/src/common/: lookandsay.py
python/src/cosmo/: lookandsay.py
python/tests/: perf.py  test_lookandsay.py
src/look_and_say/: CMakeLists.txt  look_and_say.cpp  look_and_say.hpp
src/tests/: CMakeLists.txt  look_and_say_tests.cpp
